# C-Semester-1-PJATK

./: CMakeLists.txt  PROJECT.cpp  PROJECT_TEST.cpp  TESTS.cpp  Zad01.cpp  Zad02.cpp  Zad03.cpp  Zad04.cpp  Zad05.cpp  Zad06.cpp  Zad07.cpp  Zad08.cpp  Zad09.cpp  Zad10.cpp  Zad11.cpp  Zad12.cpp  Zad13.cpp  Zad14.cpp  Zad15.cpp  Zad16.cpp  Zad17.cpp  Zad18.cpp  Zad21.cpp  Zad22.cpp  Zad23.cpp  Zad24.cpp  Zad25.cpp  Zad26.cpp  Zad27.cpp  Zad28.cpp  Zad29.cpp  Zad30.cpp  Zad31.cpp  Zad32.cpp  Zad33.cpp  Zad34.cpp  Zad35.cpp  Zad36.cpp  Zad37.cpp  Zad38.cpp  (+13 more)
