cmake_minimum_required(VERSION 3.27)
project(C++)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp Zad01.cpp)
add_executable(Zad2 Zad02.cpp)
add_executable(Zad3 Zad03.cpp)
add_executable(Zad4 Zad04.cpp)
add_executable(Zad5 Zad05.cpp)
add_executable(Zad6 Zad06.cpp)
add_executable(Zad7 Zad07.cpp)
add_executable(Zad8 Zad08.cpp)
add_executable(Zad9 Zad09.cpp)
add_executable(Zad10 Zad10.cpp)
add_executable(Zad11 Zad11.cpp)
add_executable(Zad12 Zad12.cpp)
add_executable(Zad13 Zad13.cpp)
add_executable(Zad14 Zad14.cpp)
add_executable(Zad15 Zad15.cpp)
add_executable(Zad16 Zad16.cpp)
add_executable(Zad17 Zad17.cpp)
add_executable(Zad18 Zad18.cpp)
add_executable(Zad21 Zad21.cpp)
add_executable(Zad22 Zad22.cpp)
add_executable(Zad23 Zad23.cpp)
add_executable(Zad24 Zad24.cpp)
add_executable(Zad25 Zad25.cpp)
add_executable(Zad26 Zad26.cpp)
add_executable(Zad27 Zad27.cpp)
add_executable(Zad28 Zad28.cpp)
add_executable(Zad29 Zad29.cpp)
add_executable(Zad30 Zad30.cpp)
add_executable(Zad31 Zad31.cpp)
add_executable(Zad32 Zad32.cpp)
add_executable(Zad33 Zad33.cpp)
add_executable(Zad34 Zad34.cpp)
add_executable(Zad35 Zad35.cpp)
add_executable(Zad36 Zad36.cpp)
add_executable(Zad37 Zad37.cpp)
add_executable(Zad38 Zad38.cpp)
add_executable(Zad39 Zad39.cpp)
add_executable(Zad40 Zad40.cpp)
add_executable(Zad41 Zad41.cpp)
add_executable(Zad42 Zad42.cpp)
add_executable(Zad43 Zad43.cpp)
add_executable(Zad44 Zad44.cpp)
add_executable(Zad45 Zad45.cpp)
add_executable(Zad46 Zad46.cpp)
add_executable(PROJECT PROJECT.cpp)
add_executable(Tests TESTS.cpp)
add_executable(Zad47 Zad47.cpp)
add_executable(Zad48 Zad48.cpp)
add_executable(Zad49 Zad49.cpp)
add_executable(Zad50 Zad50.cpp)
add_executable(Zad51 Zad51.cpp)
add_executable(NCURSES PROJECT_TEST.cpp)
